<?xml version="1.0"?>
<package format="3">
  <name>sdformat_urdf</name>
  <version>1.0.1</version>
  <description>
    URDF plugin to parse SDFormat XML into URDF C++ DOM objects.
  </description>

  <author email="sloretz@openrobotics.org">Shane Loretz</author>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>Apache 2.0</license>

  <url type="repository">https://github.com/ros/sdformat_urdf</url>
  <url type="bugtracker">https://github.com/ros/sdformat_urdf/issues</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_export_depend>ament_cmake_ros</buildtool_export_depend>

  <!-- Fortress (default) -->
  <depend condition="$ROS_DISTRO == 'humble'">sdformat12</depend>
  <depend condition="$ROS_DISTRO == 'rolling'">sdformat12</depend>
  <depend condition="$GZ_VERSION == fortress">sdformat12</depend>
  <depend condition="$GZ_VERSION == ''">sdformat12</depend>

  <!-- Garden -->
  <depend condition="$GZ_VERSION == garden">sdformat13</depend>
  <!-- Harmonic -->
  <depend condition="$GZ_VERSION == harmonic">sdformat14</depend>

  <depend>urdf</depend>

  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>tinyxml2_vendor</build_depend>
  <build_depend>urdf_parser_plugin</build_depend>

  <build_export_depend>liburdfdom-headers-dev</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>rcutils</build_export_depend>
  <build_export_depend>tinyxml2_vendor</build_export_depend>
  <build_export_depend>urdf_parser_plugin</build_export_depend>

  <exec_depend>tinyxml2_vendor</exec_depend>
  <exec_depend>urdf_parser_plugin</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>sdformat_test_files</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
